# guest-networkizer

./: README.md  gresource.xml  meson.build
data/: me.d_spirits.guest_networkizer.desktop
src/: gn-main-window-add-link-dialog.c  gn-main-window.c  gn-main-window.h  gn-net-load.c  gn-net-save.c  gn-net.c  gn-net.h  gn-node-panel.c  gn-node-panel.h  gn-node.c  gn-node.h  gn-ports.c  gn-ports.h  main.c  vde-ns.c  vde-ns.h  vde-plug-url-widget.c  vde-plug-url.c  vde-plug-url.h  vde-slirp-widget.c  vde-slirp.c  vde-slirp.h  vde-switch.c  vde-switch.h  vir-domain-list.c  vir-domain-list.h  vir-node-widget.c  vir-node.c  vir-node.h
tests/: common.h  main.c  node-detached-panel-ref-check.c
ui/: GNMainWindow  GNNodePanel  GNVDEPlugURLWidget  GNVDESlirpWidget  GNVirNodeWidget  GNVirNodeWidgetPortRow
